[package]
name = "hello_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.5.0"
bevy = {version = "0.18.0", default-features = false, features = ["3d"]}

[features]
debug = [
  "bevy/dynamic_linking", "bevy/debug", "bevy/dev", 
  "avian3d/bevy_diagnostic", "avian3d/debug-plugin", "avian3d/validate"
]
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
